--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -2,54 +2,106 @@ footer {
   background-color: var((--secondary-bg-color));
   width: 100vw;
 
-
   .footer-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     min-height: 5vh;
 
-
-
-  .top {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 2rem;
-
-    .left {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-    }
-
-    .right {
+    .top {
       display: flex;
-      flex-direction: row;
-      justify-content: space-evenly;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 2rem;
+      gap: 2rem;
 
-      .navigation-links,
-      .contact-info,
-      .social-links {
+      @media screen and (min-width: 992px) {
+        flex-direction: row;
+      }
+
+      .left {
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: flex-start;
+        gap: 1rem;
 
-        li {
+        .designed-and-developed {
+          font-size: 1.7rem;
+
+        }
+
+        @media screen and (min-width: 992px) {
+          justify-content: flex-end;
+        }
+      }
+
+      .right {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+
+        @media screen and (min-width: 768px) {
+          flex-direction: row;
+        }
+
+        .navigation-links,
+        .contact-info,
+        .social-links {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+          padding: 1rem;
+          margin: 1rem;
           list-style: none;
+          justify-content: left;
+          text-align: left;
+
+          .footer-link-header {
+            font-size: 1.15rem;
+            font-weight: bold;
+            margin-bottom: 0.5rem;
+            color: var(--secondary-text-color);
+          }
+
+          a {
+            text-decoration: none;
+            color: var(--primary-text-color);
+            opacity: 0.8;
+
+            &:hover {
+              opacity: 1;
+              transform: translateX(-2px);
+            }
+          }
+
+          ul {
+            margin-top: 1rem;
+            text-align: left;
+            margin: 0;
+            padding: 0;
+          }
+
+          li {
+            display: flex;
+            list-style: none;
+            align-items: flex-start;
+            text-align: left;
+            justify-content: flex-start;
+            margin: 0;
+            padding: 0;
+          }
         }
       }
     }
-  }
 
-  .bottom {
-    display: flex;
-    flex: row;
-    justify-content: space-between;
-    background-color: var(--primary-bg-color);
-    padding: 1rem 2rem;
-    color: var(--secondary-text-color);
-
+    .bottom {
+      display: flex;
+      flex: row;
+      justify-content: space-between;
+      background-color: var(--primary-bg-color);
+      padding: 1rem 2rem;
+      color: var(--secondary-text-color);
+    }
   }
-}
 }
