--- a/client/src/components/skillsSection/SkillsSection.scss
+++ b/client/src/components/skillsSection/SkillsSection.scss
@@ -18,16 +18,17 @@
         display: flex;
         flex-direction: row;
         gap: 1rem;
-        font-size: 1.3rem;
-        border: 3px solid orange;
+        font-size: 1rem;
+        border: 3px solid var(--icon-color);
         padding: .5rem 1.5rem;
         border-radius: 14px;
         align-items: center;
         justify-content: center;
 
-        &:hover {
-            background-color: orange;
-            color: black;
+
+        &.active {
+            background-color: var(--icon-color);
+            color: var(--primary-text-color);
         }
     }
 
@@ -43,15 +44,22 @@
     .skill-item {
         display: flex;
         gap: .5rem;
-        border: 3px solid orange;
+        border: 3px solid var(--icon-color);
         padding: .5rem 1rem;
         border-radius: 14px;
+        font-size: .9rem;
         align-items: center;
         justify-content: center;
 
+        &.highlighted {
+            background-color: var(--icon-color);
+            color: var(--primary-text-color);
+        }
+
         &:hover {
-            background-color: orange;
-            color: black;
+            background-color: var(--icon-color);
+            color: var(--primary-text-color);
         }
     }
 }
+
