--- a/client/src/components/timelineSection/TimelineSection.scss
+++ b/client/src/components/timelineSection/TimelineSection.scss
@@ -34,15 +34,6 @@
         display: flex;
         flex-direction: row;
 
-        .month {
-            font-size: 1rem;
-            font-weight: bold;
-        }
-
-        .year {
-            font-size: 2rem;
-            font-weight: bold;
-        }
     }
 
     .vertical-arrow-base {
@@ -58,6 +49,7 @@
   .experience-right {
     display: flex;
     flex-direction: column;
+    text-align: right;
 
     .experience-company-and-title {
       display: flex;
@@ -67,14 +59,14 @@
       padding-right: 30px;
 
       .company-name {
-        font-weight: bold;
+
         text-transform: uppercase;
 
       }
 
       .job-title {
-        font-size: 2rem;
-        font-weight: bold;
+        font-size: 1.5rem;
+
       }
     }
 
