--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -19,6 +19,7 @@ html, body {
     margin: 0;
     padding: 0;
     overflow: auto;
+    overflow-x: hidden;
 }
 
 
@@ -143,6 +144,14 @@ section {
 
         &:hover {
             transform: scale(1.1);
+        }
+
+        @media screen and (max-width: 768px) {
+            font-size: 1.5rem;
+        }
+
+        @media screen and (max-width: 480px) {
+            font-size: 1.2rem;
         }
         
     }
