--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -26,7 +26,15 @@ footer {
         gap: 1rem;
 
         .designed-and-developed {
-          font-size: 1.7rem;
+          font-size: 1rem;
+
+          @media screen and (min-width: 768px) {
+            font-size: 1rem;
+          }
+
+          @media screen and (min-width: 992px) {
+            font-size: 1.5rem;
+          }
 
         }
 
@@ -57,11 +65,18 @@ footer {
           justify-content: left;
           text-align: left;
 
+          
+
           .footer-link-header {
-            font-size: 1.15rem;
+            font-size: .9rem;
             font-weight: bold;
             margin-bottom: 0.5rem;
             color: var(--secondary-text-color);
+
+            @media screen and (min-width: 768px) {
+              font-size: 1.25rem;
+              
+            }
           }
 
           a {
@@ -90,6 +105,11 @@ footer {
             justify-content: flex-start;
             margin: 0;
             padding: 0;
+            font-size: .7rem;
+
+            @media screen and (min-width: 768px) {
+              font-size: 1rem;
+            }
           }
         }
       }
