--- a/client/src/components/aboutSection/About.scss
+++ b/client/src/components/aboutSection/About.scss
@@ -45,10 +45,12 @@
       text-align: left;
       align-items: end;
       justify-content: center;
-      margin: 1rem 0;
+      //margin: 1rem 0;
+      font-size: .9rem;
 
       @media screen and (min-width: 992px) {
         text-align: right;
+        margin: 1rem 0;
       }
     }
 
@@ -71,6 +73,7 @@
         align-items: center;
         justify-content: center;
         padding: 0.5rem;
+
       }
     }
   }
