--- a/client/src/components/mainSection/MainSection.scss
+++ b/client/src/components/mainSection/MainSection.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 
     @media screen and (min-width: 768px) {
         flex-direction: row;
@@ -20,7 +20,13 @@
     justify-content: center;
     align-items: center;
     padding: 1rem;
-    gap: 1rem;
+    gap: .5rem;
+
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+        align-items: center;
+        gap: 1rem;
+      }
     
 
     .name-title {
@@ -37,6 +43,10 @@
 
         .name {
             font-size: 5rem;
+
+            @media screen and (max-width: 768px) {
+                font-size: 3rem;
+            }
         }
 
         .one-line {
@@ -52,7 +62,11 @@
 
             .title {
                 font-size: 3rem;
-                color: var(--icon-color)
+                color: var(--icon-color);
+
+                @media screen and (max-width: 768px) {
+                    font-size: 2rem;
+                }
             }
         }
 
