Update button styles and add scroll-down arrow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -8,7 +8,8 @@
     --primary-text-color: #dadada;
     --secondary-text-color: #959787;
 
-    --primary-btn-color: #3586bc;
+    --primary-btn-color: #7689a6;
+    /* --primary-btn-color: #3586bc; */
 
     --icon-color: #7689a6;
 }
