--- a/client/src/components/footer/Footer.scss
+++ b/client/src/components/footer/Footer.scss
@@ -79,10 +79,27 @@ footer {
             }
           }
 
+          .footer-link {
+            background-color: transparent;
+            border: none;
+            padding: .1rem 0;
+            margin: 0;
+            font-size: 1rem;
+            opacity: 0.7;
+            color: var(--primary-text-color);
+            cursor: pointer;
+
+            &:hover {
+              opacity: 1;
+              transform: translateX(-2px);
+            }
+          }
+
           a {
             text-decoration: none;
             color: var(--primary-text-color);
             opacity: 0.8;
+
 
             &:hover {
               opacity: 1;
