--- a/client/src/components/mainSection/MainSection.scss
+++ b/client/src/components/mainSection/MainSection.scss
@@ -1,3 +1,42 @@
+.main-section-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1rem;
+
+    @media screen and (min-width: 480px) {
+        justify-content: center;
+        align-items: center;
+        gap: 2rem;
+      }
+    
+
+    @media screen and (min-width: 768px) {
+        gap: 2rem;
+      }
+
+      @media screen and (min-width: 992px) {
+        gap: 3rem;
+        
+      }
+
+      .scroll-down-arrow{
+        background-color: transparent;
+        opacity: .9;
+        color: var(--icon-color);
+        border: none;
+        font-size: 1.5rem;
+        cursor: pointer;
+
+        &:hover {
+            opacity: 1;
+            transform: translateY(-2px);
+        }
+      }
+}
+
 .name-title-icon-container {
     display: flex;
     flex-direction: column;
