--- a/client/src/components/skillsSection/SkillsSection.scss
+++ b/client/src/components/skillsSection/SkillsSection.scss
@@ -1,3 +1,14 @@
+:root {
+    --core-programming-color: #4caf50; // Green
+    --web-development-frameworks-color: #2196f3; // Blue
+    --data-management-analysis-color: #ff9800; // Orange
+    --cloud-deployment-version-control-color: #f44336; // Red
+  }
+
+
+
+
+
 .skills-list-and-categories {
     display: flex;
     flex-direction: column;
@@ -94,3 +105,42 @@
     }
 }
 
+
+  
+.skill-item {
+    &.CoreProgramming {
+        border-color: var(--core-programming-color);
+
+        &.highlighted, &:hover {
+            background-color: var(--core-programming-color);
+            color: white;
+        }
+    }
+
+    &.WebDevelopmentFrameworks {
+        border-color: var(--web-development-frameworks-color);
+
+        &.highlighted, &:hover {
+            background-color: var(--web-development-frameworks-color);
+            color: white;
+        }
+    }
+
+    &.DataManagementAnalysis {
+        border-color: var(--data-management-analysis-color);
+
+        &.highlighted, &:hover {
+            background-color: var(--data-management-analysis-color);
+            color: white;
+        }
+    }
+
+    &.CloudDeploymentVersionControl {
+        border-color: var(--cloud-deployment-version-control-color);
+
+        &.highlighted, &:hover {
+            background-color: var(--cloud-deployment-version-control-color);
+            color: white;
+        }
+    }
+}
